include/mcp/c_api/mcp_c_api.h

/* ============================================================================
 * Library Version and Initialization
 * ============================================================================
 */

/**
 * Initialize the MCP library
 * Must be called before any other API functions
 * @param allocator Custom allocator (NULL for default)
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_init(const mcp_allocator_t* allocator) MCP_NOEXCEPT;
/**
 * Shutdown the MCP library
 * Cleans up all resources and checks for leaks
 */
MCP_API void mcp_shutdown(void) MCP_NOEXCEPT;
/**
 * Check if library is initialized
 * @return MCP_TRUE if initialized
 */
MCP_API mcp_bool_t mcp_is_initialized(void) MCP_NOEXCEPT;
/**
 * Get library version information
 * @return Version string (do not free)
 */
MCP_API const char* mcp_get_version(void) MCP_NOEXCEPT;
/* ============================================================================
 * Event Loop & Dispatcher
 * ============================================================================
 */

/**
 * Create a new dispatcher (event loop)
 * @return Dispatcher handle or NULL on error
 */
MCP_API mcp_dispatcher_t mcp_dispatcher_create(void) MCP_NOEXCEPT;
/**
 * Run the dispatcher (blocks until stopped)
 * @param dispatcher Dispatcher handle
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_dispatcher_run(mcp_dispatcher_t dispatcher)
    MCP_NOEXCEPT;
/**
 * Stop the dispatcher
 * @param dispatcher Dispatcher handle
 */
MCP_API void mcp_dispatcher_stop(mcp_dispatcher_t dispatcher) MCP_NOEXCEPT;
/**
 * Destroy dispatcher
 * @param dispatcher Dispatcher handle
 */
MCP_API void mcp_dispatcher_destroy(mcp_dispatcher_t dispatcher) MCP_NOEXCEPT;
/**
 * Create buffer
 * @param capacity Initial capacity
 * @return Buffer or NULL
 */
MCP_API mcp_buffer_t* mcp_buffer_create(size_t capacity) MCP_NOEXCEPT;
/**
 * Free buffer
 * @param buffer Buffer
 */
MCP_API void mcp_buffer_free(mcp_buffer_t* buffer) MCP_NOEXCEPT;