include/mcp/c_api/mcp_c_filter_api.h

/* ============================================================================
 * Core Types and Enumerations
 * ============================================================================
 */

// Opaque handles for FFI safety
// Note: mcp_filter_t is already defined in mcp_c_types.h
typedef uint64_t mcp_filter_chain_t;
typedef struct mcp_filter_chain_builder* mcp_filter_chain_builder_t;
// Filter position in chain
typedef enum {
  MCP_FILTER_POSITION_FIRST = 0,
  MCP_FILTER_POSITION_LAST = 1,
  MCP_FILTER_POSITION_BEFORE = 2,  // Requires reference filter
  MCP_FILTER_POSITION_AFTER = 3    // Requires reference filter
} mcp_filter_position_t;
// Built-in filter types
typedef enum {
  // Network filters
  MCP_FILTER_TCP_PROXY = 0,
  MCP_FILTER_UDP_PROXY = 1,

  // HTTP filters
  MCP_FILTER_HTTP_CODEC = 10,
  MCP_FILTER_HTTP_ROUTER = 11,
  MCP_FILTER_HTTP_COMPRESSION = 12,

  // Security filters
  MCP_FILTER_TLS_TERMINATION = 20,
  MCP_FILTER_AUTHENTICATION = 21,
  MCP_FILTER_AUTHORIZATION = 22,

  // Observability
  MCP_FILTER_ACCESS_LOG = 30,
  MCP_FILTER_METRICS = 31,
  MCP_FILTER_TRACING = 32,

  // Traffic management
  MCP_FILTER_RATE_LIMIT = 40,
  MCP_FILTER_CIRCUIT_BREAKER = 41,
  MCP_FILTER_RETRY = 42,
  MCP_FILTER_LOAD_BALANCER = 43,

  // Custom filter
  MCP_FILTER_CUSTOM = 100
} mcp_builtin_filter_type_t;
/* ============================================================================
 * Data Structures
 * ============================================================================
 */

// Filter configuration
typedef struct mcp_filter_config {
  const char* name;                // Filter name
  mcp_builtin_filter_type_t type;  // Filter type
  mcp_json_value_t settings;       // JSON configuration
  mcp_protocol_layer_t layer;      // OSI layer
  mcp_memory_pool_t memory_pool;   // Optional memory pool
} mcp_filter_config_t;
// Filter callbacks structure
typedef struct mcp_filter_callbacks {
  // Data callbacks (executed in dispatcher thread)
  mcp_filter_data_cb on_data;
  mcp_filter_write_cb on_write;
  mcp_filter_event_cb on_new_connection;

  // Watermark callbacks
  mcp_filter_watermark_cb on_high_watermark;
  mcp_filter_watermark_cb on_low_watermark;

  // Error handling
  mcp_filter_error_cb on_error;

  void* user_data;
} mcp_filter_callbacks_t;
/* ============================================================================
 * Filter Lifecycle Management
 * ============================================================================
 */

/**
 * Create a new filter
 * @param dispatcher Event dispatcher handle
 * @param config Filter configuration
 * @return Filter handle or 0 on error
 */
MCP_API mcp_filter_t mcp_filter_create(mcp_dispatcher_t dispatcher,
                                       const mcp_filter_config_t* config)
    MCP_NOEXCEPT;
/**
 * Create a built-in filter
 * @param dispatcher Event dispatcher handle
 * @param type Built-in filter type
 * @param config JSON configuration
 * @return Filter handle or 0 on error
 */
MCP_API mcp_filter_t mcp_filter_create_builtin(mcp_dispatcher_t dispatcher,
                                               mcp_builtin_filter_type_t type,
                                               mcp_json_value_t config)
    MCP_NOEXCEPT;
/**
 * Retain filter (increment reference count)
 * @param filter Filter handle
 */
MCP_API void mcp_filter_retain(mcp_filter_t filter) MCP_NOEXCEPT;
/**
 * Release filter (decrement reference count)
 * @param filter Filter handle
 */
MCP_API void mcp_filter_release(mcp_filter_t filter) MCP_NOEXCEPT;
/**
 * Set filter callbacks
 * @param filter Filter handle
 * @param callbacks Callback structure
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_filter_set_callbacks(
    mcp_filter_t filter, const mcp_filter_callbacks_t* callbacks) MCP_NOEXCEPT;
/* ============================================================================
 * Filter Chain Management
 * ============================================================================
 */

/**
 * Create filter chain builder
 * @param dispatcher Event dispatcher
 * @return Builder handle or NULL on error
 */
MCP_API mcp_filter_chain_builder_t
mcp_filter_chain_builder_create(mcp_dispatcher_t dispatcher) MCP_NOEXCEPT;
/**
 * Add filter to chain builder
 * @param builder Chain builder handle
 * @param filter Filter to add
 * @param position Position in chain
 * @param reference_filter Reference filter for BEFORE/AFTER positions
 * @return MCP_OK on success
 */
MCP_API mcp_result_t
mcp_filter_chain_add_filter(mcp_filter_chain_builder_t builder,
                            mcp_filter_t filter,
                            mcp_filter_position_t position,
                            mcp_filter_t reference_filter) MCP_NOEXCEPT;
/**
 * Build filter chain
 * @param builder Chain builder handle
 * @return Filter chain handle or 0 on error
 */
MCP_API mcp_filter_chain_t
mcp_filter_chain_build(mcp_filter_chain_builder_t builder) MCP_NOEXCEPT;