include/mcp/c_api/mcp_c_filter_buffer.h

/* ============================================================================
 * Buffer Types and Enumerations
 * ============================================================================
 */

// Buffer ownership model
typedef enum {
  MCP_BUFFER_OWNERSHIP_NONE = 0,       // No ownership (view only)
  MCP_BUFFER_OWNERSHIP_SHARED = 1,     // Shared ownership (ref counted)
  MCP_BUFFER_OWNERSHIP_EXCLUSIVE = 2,  // Exclusive ownership
  MCP_BUFFER_OWNERSHIP_EXTERNAL = 3    // External ownership (callback)
} mcp_buffer_ownership_t;
/* ============================================================================
 * Buffer Creation and Management
 * ============================================================================
 */

/**
 * Create a new buffer
 * @param initial_capacity Initial buffer capacity
 * @param ownership Ownership model
 * @return Buffer handle or 0 on error
 */
MCP_API mcp_buffer_handle_t mcp_buffer_create_owned(
    size_t initial_capacity, mcp_buffer_ownership_t ownership) MCP_NOEXCEPT;
/**
 * Create a buffer view (zero-copy reference)
 * @param data Data pointer
 * @param length Data length
 * @return Buffer handle or 0 on error
 */
MCP_API mcp_buffer_handle_t mcp_buffer_create_view(const void* data,
                                                   size_t length) MCP_NOEXCEPT;
/* ============================================================================
 * Buffer Data Operations
 * ============================================================================
 */

/**
 * Add data to buffer
 * @param buffer Buffer handle
 * @param data Data to add
 * @param length Data length
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_buffer_add(mcp_buffer_handle_t buffer,
                                    const void* data,
                                    size_t length) MCP_NOEXCEPT;
/* ============================================================================
 * Buffer Access (Zero-Copy Reading)
 * ============================================================================
 */

/**
 * Get contiguous memory view
 * @param buffer Buffer handle
 * @param offset Offset in buffer
 * @param length Requested length
 * @param data Output: data pointer
 * @param actual_length Output: actual length available
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_buffer_get_contiguous(mcp_buffer_handle_t buffer,
                                               size_t offset,
                                               size_t length,
                                               const void** data,
                                               size_t* actual_length)
    MCP_NOEXCEPT;
/* ============================================================================
 * Buffer Information
 * ============================================================================
 */

/**
 * Get buffer length
 * @param buffer Buffer handle
 * @return Buffer length in bytes
 */
MCP_API size_t mcp_buffer_length(mcp_buffer_handle_t buffer) MCP_NOEXCEPT;
/**
 * Get buffer capacity
 * @param buffer Buffer handle
 * @return Buffer capacity in bytes
 */
MCP_API size_t mcp_buffer_capacity(mcp_buffer_handle_t buffer) MCP_NOEXCEPT;